# Corte_3

./: .gitignore  auditoria_basica.sh  carrito.py  chatbotIII.py  config.yml  dockerfile  domain.yml  line_follower.py  main.py  main2.py  nlu.yml  rules.yml  stories.yml
.rasa/cache/: cache.db
.rasa/cache/tmp6ifsyhb_/: unexpected_intent_policy.label_quantiles.st  unexpected_intent_policy.tf_model.data-00000-of-00001  unexpected_intent_policy.tf_model.index
Proyecto.3.Corte/: EnlaceEvidencia.txt  README.md  README_PERSONALIZACION.md  chatbot.py  cliente_pepper_Jaime.py  cliente_pepper_JaimeI.py  cliente_pepper_JaimeII.py  cliente_pepper_JaimeV.py  cliente_pepper_JaimeVI.py  cliente_pepper_Jaime_Final.py  server.py
Proyecto.3.Corte/venv_pepper/: pyvenv.cfg
Proyecto.3.Corte/venv_streamlit/: pyvenv.cfg
TAREAS_5/: Juegos_Naves_Espaciales_Mejorado.py  README.md  basic.launch  carrito1.py  docker-compose.yml  repositorioTarea5.txt
TAREAS_5/JuegoNaves_Docker/: Dockerfile
TAREAS_5/TAREA_QUADRUPEDO_DOCKER/: Dockerfile
TAREAS_5/TAREA_QUADRUPEDO_DOCKER/mi_paquete_quadrupedo_ros2/: package.xml  setup.cfg  setup.py
TAREAS_5/TAREA_QUADRUPEDO_DOCKER/mi_paquete_quadrupedo_ros2/scripts/: sim_quadrupedo.py  teleop_quadrupedo.py
TAREAS_5/TAREA_ROS_DOCKER/: Dockerfile
TAREAS_5/carrito_sim_Docker/: Dockerfile  carrito_pista_desafiante.py
TAREAS_5/docker/: Dockerfile
TAREAS_5/mi_paquete_pybullet_ros2/: package.xml  setup.cfg  setup.py
TAREAS_5/scripts/: carrito1.py  juegosnavales.py  talker.py
juego-adivinanzas/: client.py  main.py  server.py
(+7 files in other folders)
